# ansible-role-exiftool

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit-action.yaml
defaults/: main.yml
helpers/: get-versions-and-hashes.sh
meta/: main.yml
molecule/bionic/: molecule.yml
molecule/default/: molecule.yml
molecule/default/tests/: test_default.py
molecule/focal/: molecule.yml
molecule/ubuntu-18-04/: Dockerfile.j2  molecule.yml
molecule/ubuntu-20-04/: Dockerfile.j2  molecule.yml
molecule/ubuntu-21-10/: molecule.yml
molecule/ubuntu-21-10/tests/: test_default.py
molecule/ubuntu-22-04/: molecule.yml
tasks/: check_vars.yml  install.yml  main.yml
vars/: main.yml
