[tool.poetry]
name = "exiftool"
version = "0.3.3"
description = "Role to install ExifTool."
authors = ["Thomas Lehoux, Daniel Hoherd"]

[tool.poetry.dependencies]
python = "^3.9.0"
ansible = "^5.6.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
molecule = "^3.6.1"
docker = "^5.0.3"
molecule-docker = "^1.1.0"
pytest-testinfra = "^6.7.0"

[tool.black]
line-length = 132
target-version = ['py39']
include = '\.pyi?$'
exclude = '(venv|.vscode)'

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
