[tool.poetry]
name = "exiftool"
version = "0.3.3"
description = "Role to install ExifTool."
authors = ["Thomas Lehoux, Daniel Hoherd"]

[tool.poetry.dependencies]
python = "^3.9.0"
ansible = "^7.2.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
molecule = "^4.0.4"
docker = "^6.0.1"
molecule-docker = "^2.1.0"
pytest-testinfra = "^7.0.0"

[tool.black]
line-length = 132
target-version = ['py39']
include = '\.pyi?$'
exclude = '(venv|.vscode)'

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
